dev/saas-transfer-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-transfer-service
  namespace: zb-schools
  labels:
    app: saas-transfer-service
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: saas-transfer-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        karpenter.sh/do-not-disrupt: "true"
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
        vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
        vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
        vault.hashicorp.com/agent-inject-secret-aksk-config: "zb-schools/kv/aksk"
        vault.hashicorp.com/log-level: "debug"
        vault.hashicorp.com/namespace: "admin/engr/zb_schools/dev"
      creationTimestamp: null
      labels:
        app: saas-transfer-service
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: saas-homework-service
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - command:
            - /bin/bash
            - "-ce"
            - java  -Xms1024m -Xmx1024m -jar /opt/app/saas-transfer-service.jar
          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-transfer-service"
          imagePullPolicy: Always
          name: transfer
          ports:
            - containerPort: 8081
              name: port8081
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 50
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8081
            timeoutSeconds: 2
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: aws-ecr
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      serviceAccountName: service-account-sph-zb-schools
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: saas-transfer-service
  name: saas-transfer-service
  namespace: zb-schools
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: saas-transfer-service
  sessionAffinity: None
