dev/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tencent-games-svc
  namespace: zb-schools
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: tencent-games
  sessionAffinity: None
