dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: zb-schools
  name: ingress-zb-schools
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: "stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=86400"
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true,access_logs.s3.enabled=true,access_logs.s3.bucket=s3-sph-zb-schools-dev-access-log-bucket
    alb.ingress.kubernetes.io/subnets: "subnet-07ba408e3b3814115, subnet-024dd3663cbeca60b, subnet-0689fa37eab75f700"
    alb.ingress.kubernetes.io/load-balancer-name: "ingress-lb-zb-schools-dev"
    alb.ingress.kubernetes.io/security-groups: "sg-0c685a29fc061aac0, sg-047c915dc3f6c01e0, sg-09c7f1500155dcfd6"
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-southeast-1:767397694429:regional/webacl/zb-schools-dev-ingress-alb-wafv2/76d440b1-367f-4939-a4ef-11d0763e7b2c
spec:
  ingressClassName: alb
  rules:
    - host: sit.zbschools.sg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-frontend-svc
                port:
                  number: 80
          - path: /magnoliaPublic
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-backend-svc
                port:
                  number: 8080
          - path: /authorFrontend
            pathType: Prefix
            backend:
              service:
                name: magnolia-author-frontend-svc
                port:
                  number: 80
          - path: /magnoliaAuthor
            pathType: Prefix
            backend:
              service:
                name: magnolia-author-backend-svc
                port:
                  number: 8080
    - host: m.sit.zbschools.sg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-mobile
                port:
                  number: 80
          - path: /magnoliaPublic
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-backend-svc
                port:
                  number: 8080
          - path: /lms
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-frontend-svc
                port:
                  number: 80
    - host: sitadmin.zbschools.sg
      http:
        paths:
          - backend:
              service:
                name: magnolia-public-backend-svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
